beginner/manifests/app/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: sb-demo
  name: sb-demo-deploy
  namespace: demo
spec:
  replicas: 3
  selector:
    matchLabels:
      app: sb-demo
  template:
    metadata:
      labels:
        app: sb-demo
    spec:
      containers:
      - image: k3d-erfa.localhost:5000/sb-demo:0.1.0
        imagePullPolicy: Always
        name: sb-demo
        readinessProbe:
          httpGet:
            path: /customers
            port: 8080
          initialDelaySeconds: 3
          periodSeconds: 3
        ports:
        - containerPort: 8080
          protocol: TCP
          name: http
        volumeMounts:
        - name: config-volume
          mountPath: /app/config
      volumes:
        - name: config-volume
          configMap:
            name: sb-demo-cm
