beginner/manifests/app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sb-demo
  namespace: demo
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - host: sb-demo.localhost
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: sb-demo-svc
            port:
              number: 8080
